linked booking and treatment calender